apps/scp.bz/reader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scp-bz-reader-svc
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: scp-bz-reader
